# Polyshift

./: .gitignore  AGENTS.md  DEVELOPER.md  Makefile  README.md  config.yaml  go.mod  go.sum  test_hot_swap.sh
cmd/core/: main.go
examples/cpp-hello/: CMakeLists.txt  main.cc
examples/go-hello/: main.go
examples/java-hello/: dependency-reduced-pom.xml  pom.xml
examples/java-hello/src/main/java/com/example/hello/: HelloPlugin.java
examples/js-hello/: index.js
examples/py-hello/: main.py
internal/core/config/: config.go
internal/core/gateway/: server.go  server_test.go
internal/core/middleware/: auth.go  logger.go  metrics.go  ratelimit.go  tracing.go
internal/core/observability/: logger.go  meter.go  tracer.go
internal/core/plugin/: backoff.go  backoff_test.go  instance.go  instance_test.go  manager.go  watchdog_test.go
internal/core/router/: router.go  router_test.go  tree.go
internal/test/benchmark/: router_bench_test.go
internal/test/integration/: resilience_test.go  router_test.go
openspec/archive/2026-03-03-microkernel-framework/: design.md  tasks.md
openspec/archive/2026-03-03-microkernel-framework/specs/: requirements.md
openspec/archive/2026-03-03-observability-2.0/: design.md  proposal.md
openspec/archive/2026-03-03-observability-2.0/specs/: requirements.md
openspec/archive/2026-03-03-polyglot-sdk-observability/: design.md  proposal.md  tasks.md
openspec/archive/2026-03-03-polyglot-sdk-observability/specs/: requirements.md
openspec/archive/2026-03-03-resilience-availability/: design.md  proposal.md
openspec/changes/microkernel-framework/: proposal.md  tasks.md
openspec/changes/observability-2.0/: tasks.md
openspec/changes/polyglot-sdk-observability/: design.md
openspec/changes/polyglot-sdk-observability/specs/: requirements.md
openspec/changes/resilience-availability/: design.html  tasks.md
openspec/changes/resilience-availability/specs/: requirements.md
proto/plugin/: plugin.pb.go  plugin.proto  plugin_grpc.pb.go
scripts/: install_cpp_deps.sh  send_grpc_request.py  verify_cpp_tracing.sh  verify_java_tracing.sh  verify_js_tracing.sh  verify_python_tracing.sh
sdk/cpp/: CMakeLists.txt
sdk/cpp/include/polyshift/: plugin.h
sdk/cpp/proto/plugin/: plugin.grpc.pb.cc  plugin.grpc.pb.h  plugin.pb.cc  plugin.pb.h
sdk/cpp/src/: main.cc  plugin_service_impl.h  server.cc
sdk/cpp/test/: tracing_test.cc
sdk/go/pkg/plugin/: server.go
sdk/java/: pom.xml
sdk/java/src/main/java/com/polyshift/plugin/: PluginServer.java
sdk/java/src/test/java/com/polyshift/plugin/: TracingTest.java
sdk/js/: index.js  package-lock.json  package.json
sdk/python/: requirements.txt
sdk/python/polyshift/plugin/: plugin_pb2.py  plugin_pb2_grpc.py  server.py
sdk/python/tests/: test_tracing.py
test/e2e/: chaos_kill.sh  circuit_breaker.sh  config_cb.yaml  config_chaos.yaml
test/e2e/flaky_plugin/: main.go
